fixed image not showing on first page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -252,7 +252,7 @@ nav a:active:hover, .active:hover {
 }
 
 .hero_image1 {
-  background: url(./images/hero-image1.jpg);
+  background: url(../images/hero-image1.jpg);
   height: 350px;
   width: auto;
   background-position: bottom center;
